--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,9 @@ dependencies {
 
     implementation "mysql:mysql-connector-java:8.0.23"
 
+    compile 'org.springframework.boot:spring-boot-starter-data-jpa:2.3.4.RELEASE'
+    compile("org.springframework.boot:spring-boot-starter-web")
+
     // https://mvnrepository.com/artifact/io.springfox/springfox-swagger2
     implementation group: 'io.springfox', name: 'springfox-swagger2', version: '2.8.0'
 
@@ -32,6 +35,10 @@ dependencies {
     implementation group: 'org.springframework.boot', name: 'spring-boot-configuration-processor', version: '2.4.2'
 	// https://mvnrepository.com/artifact/com.github.shamithachandrasena/websecurity-token
     implementation group: 'com.github.shamithachandrasena', name: 'websecurity-token', version: '1.0.2'
+
+    // https://mvnrepository.com/artifact/org.projectlombok/lombok
+    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.16'
+
 
 }
 
