--- a/build.gradle
+++ b/build.gradle
@@ -20,20 +20,23 @@ dependencies {
 
     compile 'org.springframework.boot:spring-boot-starter-data-jpa:2.3.4.RELEASE'
     compile("org.springframework.boot:spring-boot-starter-web")
-
+// https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient
+    implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.13'
     // https://mvnrepository.com/artifact/io.springfox/springfox-swagger2
     implementation group: 'io.springfox', name: 'springfox-swagger2', version: '2.8.0'
+// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-security
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '2.4.3'
 
     // https://mvnrepository.com/artifact/io.springfox/springfox-swagger-ui
     implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.8.0'
 
     // https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt
     implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
-	// https://mvnrepository.com/artifact/org.springframework.security/spring-security-test
+    // https://mvnrepository.com/artifact/org.springframework.security/spring-security-test
     testImplementation group: 'org.springframework.security', name: 'spring-security-test', version: '5.4.4'
-	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-configuration-processor
+    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-configuration-processor
     implementation group: 'org.springframework.boot', name: 'spring-boot-configuration-processor', version: '2.4.2'
-	// https://mvnrepository.com/artifact/com.github.shamithachandrasena/websecurity-token
+    // https://mvnrepository.com/artifact/com.github.shamithachandrasena/websecurity-token
     implementation group: 'com.github.shamithachandrasena', name: 'websecurity-token', version: '1.0.2'
 
 }
